--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="./resources/css/style.css">
     <meta charset="utf-8">
-    <title></title>
+    <title>Brodway Design</title>
   </head>
   <body>
-
+    <div class="top">
+      <h1>Broadway Design</h1>
+      <p><a href="#contact">Home</a></p>
+      <p><a href="#contact">About</a></p>
+      <p><a href="#contact">Work</a></p>
+      <p><a href="#contact">Team</a></p>
+      <p><a href="#contact">Contact</a></p>
+    </div>
   </body>
 </html>
