--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Brodway Design</title>
   </head>
   <body>
-    <div class="top">
+    <div id="contact" class="top">
       <h1>Broadway Design</h1>
       <p><a href="#contact">Home</a></p>
       <p><a href="#contact">About</a></p>
@@ -39,5 +39,13 @@
       <p>E-mail: test@example.com</p>
       <p>Twitter: @test</p>
     </div>
+    <footer>
+      &copy; Broadway 2016
+      <a href="#contact">Home</a>
+      <a href="#contact">About</a>
+      <a href="#contact">Work</a>
+      <a href="#contact">Team</a>
+      <a href="#contact">Contact</a>
+    </footer>
   </body>
 </html>
